# github-agent

./: .bumpversion.cfg  .env.example  .pre-commit-config.yaml  .vulture_ignore  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  a2a.json  compose.yml  connector_manifest.yml  debug.Dockerfile  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  usage.md
github_agent/: __main__.py  agent.py  agent_server.py  api_client.py  api_wrapper.py  auth.py  github_agent.py  github_agent.py.bak  github_gql.py  github_http.py  github_input_models.py  github_response_models.py  graph_config.py  kg_ingest.py  mcp_config.json  mcp_server.py  mcp_server.py.debug  tools.py  utils.py
github_agent/agent/: HEARTBEAT.md  IDENTITY.md
github_agent/agent_data/: IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json  templates.py
github_agent/api/: __init__.py  api_client_base.py  api_client_branches.py  api_client_comments.py  api_client_commits.py  api_client_contents.py  api_client_dependabot.py  api_client_issues.py  api_client_orgs.py  api_client_pages.py  api_client_pulls.py  api_client_releases.py  api_client_repos.py  api_client_search.py  api_client_workflows.py
github_agent/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
github_agent/mcp/: __init__.py  mcp_action.py  mcp_branch.py  mcp_collaborator.py  mcp_commit.py  mcp_content.py  mcp_dependabot.py  mcp_issue.py  mcp_org.py  mcp_pull.py  mcp_release.py  mcp_repo.py  mcp_search.py
github_agent/ontology/: __init__.py  certification.json  github.ttl
github_agent/ontology/fixtures/: records.json
github_agent/ontology/mappings/: source.yaml
github_agent/ontology/migrations/: manifest.json
github_agent/ontology/shapes/: connector.shacl.ttl
github_agent/prompts/: code_collaboration_specialist.json  main_agent.json
github_agent/skills/github-actions-ci-review/: SKILL.md  WORKFLOW.md
github_agent/skills/github-agent-operations/: SKILL.md
github_agent/skills/github-backlog-planner/: SKILL.md  WORKFLOW.md
github_agent/skills/github-bell/: SKILL.md
github_agent/skills/github-ci-failure-sweep/: SKILL.md  WORKFLOW.md
github_agent/skills/github-codescan/: SKILL.md
github_agent/skills/github-comment-discussion/: SKILL.md
github_agent/skills/github-copilot/: SKILL.md
github_agent/skills/github-copilot-spaces/: SKILL.md
github_agent/skills/github-dependabot/: SKILL.md
github_agent/skills/github-dependabot-review/: SKILL.md  WORKFLOW.md
github_agent/skills/github-git-branch/: SKILL.md
github_agent/skills/github-git-pull-request/: SKILL.md
github_agent/skills/github-github-support-docs-search/: SKILL.md
github_agent/skills/github-issue-opened/: SKILL.md
github_agent/skills/github-issue-tracking/: SKILL.md  WORKFLOW.md
github_agent/skills/github-logo-gist/: SKILL.md
github_agent/skills/github-org-remediation-loop/: SKILL.md  WORKFLOW.md
github_agent/skills/github-organization/: SKILL.md
github_agent/skills/github-people/: SKILL.md
github_agent/skills/github-person/: SKILL.md
github_agent/skills/github-pr-review-sweep/: SKILL.md  WORKFLOW.md
github_agent/skills/github-project/: SKILL.md
github_agent/skills/github-project-provisioner/: SKILL.md  WORKFLOW.md
github_agent/skills/github-pull-request-create/: SKILL.md  WORKFLOW.md
github_agent/skills/github-pull-request-review/: SKILL.md  WORKFLOW.md
github_agent/skills/github-repo/: SKILL.md
github_agent/skills/github-repository-management/: SKILL.md  WORKFLOW.md
github_agent/skills/github-rest-api-docs/: SKILL.md
github_agent/skills/github-rest-docs/: SKILL.md
github_agent/skills/github-shield/: SKILL.md
github_agent/skills/github-shield-lock/: SKILL.md
github_agent/skills/github-star/: SKILL.md
github_agent/skills/github-starter/: SKILL.md
github_agent/skills/github-tag/: SKILL.md
github_agent/skills/github-tools/: SKILL.md  WORKFLOW.md
github_agent/skills/github-triage-resolver/: SKILL.md  WORKFLOW.md
installation/: index.html
legacy_readme/: index.html
overview/: index.html
search/: search_index.json
tests/: conftest.py  test_action_discovery.py  test_api_client_endpoints.py  test_api_validation.py  test_auth_client_edge_cases.py  test_comment_crud.py  test_concept_parity.py  test_github_agent_api_brute_force_coverage.py  test_github_agent_brute_force_coverage.py  test_github_gql.py  test_hardening.py  test_init_dynamics.py  test_kg_ingest.py  test_mcp_coverage.py  test_model_fields.py  test_org_crud.py  test_pages.py  test_startup.py
usage/: index.html
(+497 files in other folders)
