[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "github-agent"
version = "1.0.1"
readme = "README.md"
description = "GitHub Agent for MCP"
requires-python = ">=3.11, <3.15"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
dependencies = [ "agent-utilities[mcp]>=1.0.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.scripts]
github-mcp = "github_agent.mcp_server:mcp_server"
github-agent = "github_agent.agent_server:agent_server"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.0.0",]
agent = [ "agent-utilities[agent,logfire]>=1.0.0",]
all = [ "agent-utilities[mcp,agent,logfire]>=1.0.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio",]

[project.entry-points."agent_utilities.skill_providers"]
github-agent = "github_agent.skills"

[project.entry-points."agent_utilities.prompt_providers"]
github-agent = "github_agent.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
github_agent = [ "mcp_config.json", "agent_data/**", "prompts/**", "skills/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
