[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "github-agent"
version = "1.4.2"
readme = "README.md"
description = "GitHub Agent for MCP"
requires-python = ">=3.11, <3.15"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
dependencies = [ "agent-utilities[mcp]>=1.27.1,<2.0.0", "gql[requests]>=4.0.0",]
[[project.authors]]
name = "Project Maintainers"
email = "maintainers@users.noreply.github.com"

[project.license]
text = "MIT"

[project.scripts]
github-mcp = "github_agent.mcp_server:mcp_server"
github-agent = "github_agent.agent_server:agent_server"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.27.1,<2.0.0",]
agent = [ "agent-utilities[agent-runtime,logfire]>=1.27.1,<2.0.0",]
all = [ "agent-utilities[mcp,agent-runtime,logfire]>=1.27.1,<2.0.0",]
test = [
    "pytest-xdist>=3.8.0", "pytest>=9.1.1", "pytest-asyncio>=1.4.0",]

[project.entry-points."agent_utilities.skill_providers"]
github-agent = "github_agent.skills"

[project.entry-points."agent_utilities.ontology_providers"]
github-agent = "github_agent.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
github-agent = "github_agent.connectors"

[project.entry-points."agent_utilities.prompt_providers"]
github-agent = "github_agent.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
github_agent = [ "mcp_config.json", "agent_data/**", "prompts/**", "skills/**", "ontology/**", "connectors/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
